# schemato

./: Cargo.toml  LICENSE  README.md
src/: main.rs
testapp/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  postgrest.conf
testapp/schemata/: 0001.sql  0002.sql
