[package]
name = "schemato"
description = "Database migration management tool"
version = "1.0.0"
authors = ["colvin <39858617+colvin@users.noreply.github.com>"]
repository = "https://github.com/colvin/schemato"
homepage = "https://github.com/colvin/schemato"
license = "MIT"
edition = "2018"
exclude = ["testapp"]
categories = ["database", "command-line-utilities"]

[dependencies]
clap = "2.33.0"
log = "0.4"
fern = "0.5"
chrono = "0.4"
postgres = "0.15"
glob = "0.3"
